Modify styling, add heavier font weights

--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
     <div class="sidebar">
         <div><img src="icons/view-dashboard.svg">Dashboard</div>
         <ul class="sidebar-top-links">
-            <li><img src="icons/home-circle.svg">Home</li>
-            <li><img src="icons/account-box-outline.svg">Profile</li>
-            <li><img src="icons/message.svg">Messages</li>
-            <li><img src="icons/history.svg">History</li>
-            <li><img src="icons/clipboard-check.svg">Tasks</li>
-            <li><img src="icons/account-group.svg">Communities</li>
+            <li><img src="icons/home-circle.svg"><a href="#">Home</a></li>
+            <li><img src="icons/account-box-outline.svg"><a href="#">Profile</a></li>
+            <li><img src="icons/message.svg"><a href="#">Messages</a></li>
+            <li><img src="icons/history.svg"><a href="#">History</a></li>
+            <li><img src="icons/clipboard-check.svg"><a href="#">Tasks</a></li>
+            <li><img src="icons/account-group.svg"><a href="#">Communities</a></li>
         </ul>
         <ul class="sidebar-bottom-links">
-            <li><img src="icons/cog-outline.svg">Settings</li>
-            <li><img src="icons/help-box.svg">Support</li>
-            <li><img src="icons/shield-check.svg">Privacy</li>
+            <li><img src="icons/cog-outline.svg"><a href="#">Settings</a></li>
+            <li><img src="icons/help-box.svg"><a href="#">Support</a></li>
+            <li><img src="icons/shield-check.svg"><a href="#">Privacy</a></li>
         </ul>
     </div>
     <div class="header">
@@ -34,24 +34,24 @@
                 <input type="text" name="search">
             </div>
             <div>
-                <img class="header-icon" src="icons/bell-ring-outline.svg">
+                <a href="#"><img class="header-icon" src="icons/bell-ring-outline.svg"></a>
             </div>
             <div>
-                <img src="icons/toadette.png" alt="toadette" id="profile-sm">
-                <h2>Toadette</h2>
+                <a href="#"><img src="icons/avatarF2.png" alt="avatar" id="profile-sm"></a>
+                <a href="#"><h2>Morgan Oakley</h2></a>
             </div>
             
         </div>
         <div class="header-bottom">
-            <img src="icons/toadette.png" alt="toadette">
+            <img src="icons/avatarF2.png" alt="toadette">
             <div class="greeting">
                 <h4>Hi there,</h4>
-                <h2>Toadette (@toadette)</h2>
+                <h2>Morgan Oakley (@morgan)</h2>
             </div>
             <div class="header-buttons">
-                <button href="#">New</button>
-                <button href="#">Upload</button>
-                <button href="#">Share</button>
+                <button>New</button>
+                <button>Upload</button>
+                <button>Share</button>
             </div>
         </div>
     </div>
@@ -133,25 +133,25 @@
             </div>
             <h2>Trending</h2>
             <div class="trending-card">
-                <div><img src="icons/Avatar-PNG-Transparent-Image.png" alt=""></div>
+                <div><img src="icons/avatarF1.png" alt="avatar"></div>
                 <div>
                     <h6>@tegan</h6>
-                    <h6>World Peace Builder</h6>
+                    <h6 class="roles">World Peace Builder</h6>
                 </div>
-                <div><img src="icons/Avatar-PNG-Transparent-Image.png" alt=""></div>
+                <div><img src="icons/avatarF2.png" alt="avatar"></div>
                 <div>
                     <h6>@morgan</h6>
-                    <h6>Super Cool Project</h6>
+                    <h6 class="roles">Super Cool Project</h6>
                 </div>
-                <div><img src="icons/Avatar-PNG-Transparent-Image.png" alt=""></div>
+                <div><img src="icons/avatarF3.png" alt="avatar"></div>
                 <div>
                     <h6>@kendall</h6>
-                    <h6>Life Changing App</h6>
+                    <h6 class="roles">Life Changing App</h6>
                 </div>
-                <div><img src="icons/Avatar-PNG-Transparent-Image.png" alt=""></div>
+                <div><img src="icons/Avatar-PNG-Transparent-Image.png" alt="avatar"></div>
                 <div>
                     <h6>@alex</h6>
-                    <h6>No Traffic Maker</h6>
+                    <h6 class="roles">No Traffic Maker</h6>
                 </div>
             </div>
         </div>
